# MediaPlayer

./: .gitignore  CMakeLists.txt  media-player-window.cpp  media-player-window.h  media-player-window.ui
data/: test.webm
data/result/: Monkey.webm
src/: CMakeLists.txt  main.cpp
src/convertation/: CMakeLists.txt  convertation-window.cpp  convertation-window.h  convertation-window.ui  convertation.cpp  convertation.h
src/media-player/: CMakeLists.txt  main.cpp  media-player-window.cpp  media-player-window.h  media-player-window.ui
src/player/: CMakeLists.txt  player.cpp  player.h
src/save-load-settings/: CMakeLists.txt
src/sound/: CMakeLists.txt  sound.cpp  sound.h
src/video-handler/: CMakeLists.txt
