add_subdirectory(media-player)
set(MEDIAPLAYER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/media-player)
file(GLOB_RECURSE MEDIAPLAYER_SRC_FILES ${MEDIAPLAYER_SRC_DIR}/*.cpp ${MEDIAPLAYER_SRC_DIR}/*.h ${MEDIAPLAYER_SRC_DIR}/*.ui)

add_subdirectory(sound)
set(SOUND_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sound)
file(GLOB_RECURSE SOUND_SRC_FILES ${SOUND_SRC_DIR}/*.cpp ${SOUND_SRC_DIR}/*.h ${SOUND_SRC_DIR}/*.ui)

add_executable(${PROJECT_NAME} ${MEDIAPLAYER_SRC_FILES} ${SOUND_SRC_FILES})
