add_subdirectory(media-player)
set(MEDIAPLAYER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/media-player)
file(GLOB_RECURSE MEDIAPLAYER_SRC_FILES ${MEDIAPLAYER_SRC_DIR}/*.cpp ${MEDIAPLAYER_SRC_DIR}/*.h ${MEDIAPLAYER_SRC_DIR}/*.ui)

add_subdirectory(sound)
set(SOUND_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sound)
file(GLOB_RECURSE SOUND_SRC_FILES ${SOUND_SRC_DIR}/*.cpp ${SOUND_SRC_DIR}/*.h ${SOUND_SRC_DIR}/*.ui)

add_subdirectory(player)
set(PLAYER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/player)
file(GLOB_RECURSE PLAYER_SRC_FILES ${PLAYER_SRC_DIR}/*.cpp ${PLAYER_SRC_DIR}/*.h ${PLAYER_SRC_DIR}/*.ui)

#add_subdirectory(save-load-settings)
#set(SAVELOADSETTINGS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/save-load-settings)
#file(GLOB_RECURSE SAVELOADSETTINGS_SRC_FILES ${SAVELOADSETTINGS_SRC_DIR}/*.cpp ${SAVELOADSETTINGS_SRC_DIR}/*.h ${SAVELOADSETTINGS_SRC_DIR}/*.ui)

add_subdirectory(convertation)
set(CONVERTATION_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/convertation)
file(GLOB_RECURSE CONVERTATION_SRC_FILES ${CONVERTATION_SRC_DIR}/*.cpp ${CONVERTATION_SRC_DIR}/*.h ${CONVERTATION_SRC_DIR}/*.ui)

add_executable(${PROJECT_NAME} 
	${MEDIAPLAYER_SRC_FILES} 
	${SOUND_SRC_FILES} 
        ${PLAYER_SRC_FILES}
#	${SAVELOADSETTINGS_SRC_FILES}
        ${CONVERTATION_SRC_FILES}
        convertation/convertation.h convertation/convertation.cpp
)
